# NetworthCSV

./: .cursorignore  .editorconfig  .env.example  .gitignore  LICENSE  Makefile  README.md  TLDR.md  accounts.example.json  app.config.json  extractor.config.sample.json  pyproject.toml  requirements.txt  user.config.sample.json
.cursor/rules/: anonymize-statement-pii.mdc
docs/: CONTRIBUTING.md
src/: __main__.py  cleanup.py  cli.py  config.py  context.py  extractor.py  logging_config.py  main.py  parse.py  settings.py
src/alerts/: __init__.py  models.py  service.py
src/bank/: __init__.py  base.py
src/core/: __init__.py  accounts.py  amounts.py  dates.py  env.py  paths.py  pdf.py  transactions.py
src/networthcsv/: __main__.py  cli.py  context.py  errors.py  logging.py  runtime.py  settings.py
src/parsers/: __init__.py  base.py  bob.py  common.py  idfc.py  pnb.py  (+1 more)
tests/: __main__.py  cleanup_support.py  helpers.py  parse_support.py  run.py  test_account_dates.py  test_alerts.py  test_amounts.py  test_bank_parsers.py  test_billing_period.py  test_bob_formats.py  test_cleanup.py  test_cli.py  test_dates.py  test_delete_statements.py  test_email_message.py  test_fetch_date.py  test_imap.py  test_metadata.py  test_metadata_fixtures.py  test_parse_stage.py  test_parsers.py  test_path.py  test_paths.py  test_pdf.py  test_readonly_imap.py  test_runner.py  test_settings.py  test_statement.py  test_statement_balance.py  test_statement_date.py  test_statement_period.py  test_text_extract.py  test_thunderbird.py  test_upload.py  test_zip_archive.py  zip_support.py
(+283 files in other folders)
