[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ccparser"
version = "0.1.0"
description = "Parse credit card statement PDFs from Thunderbird into CSV"
requires-python = ">=3.11"
dependencies = [
    "pypdf~=6.12",
    "cryptography~=48.0",
    "pdfplumber~=0.11",
    "pydantic~=2.11",
]

[project.scripts]
ccparser = "src.pipeline.orchestrator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
