[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "NetworthCSV"
version = "0.1.0"
description = "Parse credit card and bank statement PDFs from email into CSV files"
requires-python = ">=3.11"
dependencies = ["pypdf", "pdfplumber", "pydantic", "pyzipper"]

[project.scripts]
networthcsv = "networthcsv.__main__:main"

[dependency-groups]
dev = ["basedpyright", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[[tool.basedpyright.executionEnvironments]]
root = "src"

[[tool.basedpyright.executionEnvironments]]
root = "tests"
extraPaths = ["src", "tests"]
